<resources>
    <string name="app_name">GitHubTest</string>
    <string name="hello_word">Hello word Test</string>
    <string name="splash">splash</string>
    <string name="another_button">Another Button</string>
    <string name="another2_button">Another Button</string>
    <string name="splash_layout">Splash Layout</string>
    <string name="App_finish">App Finish Ok?</string>

    <string name="tabbar_title_home">Home</string>
    <string name="tabbar_title_request">Request</string>
    <string name="tabbar_title_shopping">Shopping</string>
    <string name="tabbar_title_my_cart">Cart</string>
    <string name="tabbar_title_my_page">My page</string>


    <string name="home_fragment">Home fragment</string>
    <string name="request_fragment">Request fragment</string>
    <string name="shopping_fragment">shopping fragment</string>
    <string name="cart_fragment">Cart fragment</string>
    <string name="my_page_fragment">MyPage fragment</string>

</resources>
