<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:id="@+id/toolbar_ll_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/home_tab_selector"
                android:gravity="center_horizontal"
                android:text="@string/tabbar_title_home"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/request_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/request_tab_selector"
                android:gravity="center_horizontal"
                android:text="@string/tabbar_title_request" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shopping_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/shopping_tab_selector"
                android:gravity="center_horizontal"
                android:text="@string/tabbar_title_shopping" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cart_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/cart_tab_selector"
                android:gravity="center_horizontal"
                android:text="@string/tabbar_title_my_cart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_page_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/my_page_tab_selector"
                android:gravity="center_horizontal"
                android:text="@string/tabbar_title_my_page" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>